compress blur image

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -12,7 +12,7 @@
 }
 
 #overviewGroup {
-  background-image: url('bg_blur.png');
+  background-image: url('bg_blur.jpg');
   background-size: cover;
 }
 
